--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@
 #
 # SPDX-License-Identifier: Unlicense
 
-Adafruit-Blinka>=7.0.0
-pyasn1
-adafruit-circuitpython-logging>=4.0.0
+logging
+os
+hashlib
